actualidad en movil acomodado el texto derecha

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -136,6 +136,24 @@
     }
 }
 
+@media screen and (min-width: 0px) {
+  .actualidad-texto {
+      margin-top: 10px;
+      padding: 20px;
+      background-color: #f0efef;
+      z-index: 1;
+  }
+
+
+  .actualidad-texto-derecha {
+    
+      margin-top: 10px;
+      padding: 20px;
+      background-color: #f0efef;
+      z-index: 1;
+  }
+}
+
 /* footer */
 
 
